<resources>
    <!-- Shared Preferences   -->
    <string name="preference_key">br.com.dticampossales.appsischamados.preference_key</string>
    <string name="is_authenticated">isAuthenticated</string>
    <string name="is_hash_login">nologin</string>
    <string name="session_user_id">user_id</string>
    <string name="session_user_perfil">user_perfil</string>

    <!-- Default Values -->
    <string name="app_name">Control Chamados</string>
    <string name="app_sub">Gestão e Controle de Chamados</string>
    <string name="app_footer">&#169;2023 Departamento de Tecnologia Araripe</string>
    <string name="app_verify_login">Verificando Acesso…</string>
    <string name="app_success">Operação Realizada com Sucesso!</string>
    <string name="app_fail">Falha ao Proccessar Operação!</string>
    <string name="app_fail_login">Usuário ou Senha Inválidos!</string>

    <!--  Login Activity  -->
    <string name="login_form_submit">Acessar Sistema</string>
    <string name="login_form_email">E-mail</string>
    <string name="login_form_senha">Senha</string>

    <!-- Accessybility Descriptions-->
    <string name="app_bg_alt">Logo Sistema Chamados</string>

    <!-- ChamadosListFragment -->
    <string name="label_cod">Código</string>
    <string name="label_dataopen">Abertura</string>
    <string name="label_dataprev">Previsão</string>
    <string name="label_setor">Setor</string>

    <string name="fragment_text">Fragment</string>

    <!-- Chamados -->
    <string name="chamados_list_key">chamados</string>
    <string name="chamados_floating_desc">Actions</string>
    <string name="filter_title">Filtrar dados</string>
    <string name="filter_sector_label">Setor:</string>
    <string name="filter_equipment_label">Equipamento:</string>
    <string name="filter_status_label">Status:</string>
    <string name="filter_btn_text">Filtrar</string>
    <string name="chamados_btn_desc">Aplicar filtro</string>
    <string name="filter_default">Selecionar</string>
    <string name="filter_name">name</string>
    <string name="clear_btn_text">Limpar</string>
    <string name="chamados_list_empty">Não há chamados para mostrar!</string>
    <string name="report_text_placeholder">Digite seu relatório</string>
    <string name="report_button_text">Atualizar</string>
    <string name="atendimento_id">chamado_id</string>
    <string name="atendimento_color">chamado_color</string>
    <string name="atendimento_list_empty">Não há relatórios para mostrar</string>
    <string name="hospital_id">1</string>
    <string name="api_up_message_key">message</string>
    <string name="menu_detalhes">Detalhes</string>
    <string name="menu_relatorio">Relatório</string>
</resources>