<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chamados_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_view"
        android:visibility="gone"
        android:translationZ="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/chamados_floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/chamados_floating_desc"
        android:src="@drawable/baseline_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:animationCache="true"
        android:background="?attr/colorOnSecondary"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:persistentDrawingCache="animation"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/filter_sector_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filter_sector_label"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintBottom_toTopOf="@+id/filter_sector"
            app:layout_constraintStart_toStartOf="@+id/filter_sector"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/filter_sector"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/select_height"
            android:layout_marginBottom="16dp"
            android:spinnerMode="dropdown"
            app:circularflow_defaultRadius="@dimen/nav_header_vertical_spacing"
            app:layout_constraintBottom_toTopOf="@+id/filter_status_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/filter_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_status_label"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintBottom_toTopOf="@+id/filter_status"
            app:layout_constraintStart_toStartOf="@+id/filter_status" />

        <Spinner
            android:id="@+id/filter_status"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/select_height"
            android:layout_marginBottom="16dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@+id/filter_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="24dp"
            android:backgroundTint="?attr/colorPrimary"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/chamados_btn_desc"
            android:elegantTextHeight="true"
            android:text="@string/filter_btn_text"
            app:icon="@drawable/baseline_check_24"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="24dp"
            android:backgroundTint="?attr/colorError"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/chamados_btn_desc"
            android:elegantTextHeight="true"
            android:text="@string/clear_btn_text"
            app:icon="@drawable/baseline_clear_24"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="@+id/filter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filter_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chamados_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="?attr/dialogPreferredPadding"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/chamado_card"
        tools:visibility="visible" />

    <TextView
        android:visibility="gone"
        android:id="@+id/chamados_list_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorSecondary"
        android:text="@string/chamados_list_empty"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:maxWidth="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/empty_list" />

</androidx.constraintlayout.widget.ConstraintLayout>